--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,6 @@
+spring.application.name = blog-service
+server.port = 8090
+
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=root
 spring.datasource.password=root
